z-cluster-0/argo-cd/templates/virtualservice.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argo-cd-server
  namespace: argo-cd
spec:
  gateways:
    - argo-cd-server
  hosts:
    - argo-cd.zasda.test
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: argo-cd-server
            port:
              number: 80
